[gd_scene load_steps=5 format=3 uid="uid://dkls35ip0uc3s"]

[ext_resource type="Texture2D" uid="uid://ci7wcxijbdhe6" path="res://assets/textures/ui/crosshair_1.png" id="1_6oir0"]
[ext_resource type="Script" path="res://src/scripts/hud.gd" id="1_c0ndt"]
[ext_resource type="LabelSettings" uid="uid://c2aqfqojhaqwc" path="res://src/resources/ui/label_settings_1.tres" id="3_mx1si"]
[ext_resource type="LabelSettings" uid="uid://borrrk15gdyjc" path="res://src/resources/ui/fps_label_settings.tres" id="4_vcnbb"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_c0ndt")

[node name="Crosshair" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6oir0")

[node name="AmmoCounter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -12.0
offset_right = 21.0
grow_horizontal = 2
grow_vertical = 0
text = "['''] 2/120"
label_settings = ExtResource("3_mx1si")
horizontal_alignment = 1

[node name="Health" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -12.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0
text = "[ + ]  75/100"
label_settings = ExtResource("3_mx1si")
horizontal_alignment = 1

[node name="DebugLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
label_settings = ExtResource("3_mx1si")

[node name="FPSMonitorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 16.0
grow_horizontal = 0
text = "24"
label_settings = ExtResource("4_vcnbb")
horizontal_alignment = 1
